--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "dependencies": {
         "@prisma/client": "^5.15.0",
-        "bcrypt": "^5.1.1",
+        "bcrypt": "^6.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
         "http-errors": "^2.0.0",
