--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "@prisma/client": "^5.15.0",
+        "@prisma/client": "^5.22.0",
         "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.2",
@@ -22,6 +22,9 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
         "nodemon": "^2.0.19",
-        "prisma": "^5.15.0"
+        "prisma": "^5.22.0"
+    },
+    "prisma": {
+        "schema": "./prisma/schema.prisma"
     }
 }
